--- a/01_Docker/exam_docker_bezpalko/docker_image_content/Dockerfile
+++ b/01_Docker/exam_docker_bezpalko/docker_image_content/Dockerfile
@@ -8,10 +8,10 @@ RUN apt-get update && apt-get install python3-pip -y && pip3 install requests
 ENV LOG 1
 
 # Récupérer le script python depuis la machine hôte
-ADD test_authentication.py /api/test_authentication.py
+#ADD test_content.py /api/test_content.py
 
 # Répertoire de travail
 WORKDIR /api/
 
 # Lancer le test python
-CMD python3 test_authentication.py
+CMD python3 test_content.py
